// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[schema] <Schema /> renders correctly 1`] = `
<script
  type="application/ld+json"
>
  {"@context":"http://schema.org/","@type":"Thing"}
</script>
`;

exports[`[schema] <Schema /> renders correctly when isPretty=true 1`] = `
<script
  type="application/ld+json"
>
  {
  "@context": "http://schema.org/",
  "@type": "Thing"
}
</script>
`;
